# pose-estimation

./: .gitignore  CMakeLists.txt  README.md
include/: ObjectEstimator.h  Utility.h  pose_estimation.h  results_writer.h  utils.h
output/: can_results.txt  driller_results.txt  duck_results.txt
src/: ObjectEstimator.cpp  Utility.cpp  main.cpp  pose_estimation.cpp  results_writer.cpp  utils.cpp
